Toolbar fix: making sure hiding ab-item on network-menu-mobile and my-openlab only happens on mobile

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -847,8 +847,10 @@
                 }
                 #wp-admin-bar-network-menu-mobile,
                 #wp-admin-bar-my-openlab{
-                    > .ab-item{
-                        display: none;
+                    @media (max-width: @screen-xs-max){
+                        > .ab-item{
+                            display: none;
+                        }
                     }
                 }
 
